Add filter groups display at leaf, add right drawer, use some styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,11 @@
 <resources>
     <string name="app_name">DrawerTest</string>
-    <string name="hello">Hallo</string>
-    <string name="greeting">I\'m toast</string>
-    <string name="action_drawer">Navigate</string>
-    <string name="drawer_open">Open drawer</string>
-    <string name="drawer_close">Close drawer</string>
     <!-- Drawer titles -->
-    <string name="account_title">Account</string>
+    <string name="search_hint">Search</string>
+    <string name="account_title">Products</string>
     <string name="products_title">Products</string>
     <string name="alfa_title">Alfa\nFragment</string>
     <string name="bravo_title">Bravo\nFragment</string>
     <string name="charlie_title">Charlie\nFragment</string>
+    <string name="your_cart">Your cart</string>
 </resources>
