--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">DrawerTest</string>
     <!-- Drawer titles -->
-    <string name="search_hint">Search</string>
-    <string name="account_title">Products</string>
+    <string name="account_title">Account</string>
     <string name="products_title">Products</string>
-    <string name="alfa_title">Alfa\nFragment</string>
-    <string name="bravo_title">Bravo\nFragment</string>
-    <string name="charlie_title">Charlie\nFragment</string>
+    <string name="alfa_title">Alfa</string>
+    <string name="bravo_title">Bravo</string>
+    <string name="charlie_title">Charlie</string>
+    <string name="search_hint">Search</string>
     <string name="your_cart">Your cart</string>
 </resources>
