Final pre-Kendall

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">DrawerTest</string>
+    <string name="staples">Staples</string>
+
+    <string name="left_drawer">Left Drawer</string>
+    <string name="search">Search</string>
+    <string name="right_drawer">Right Drawer</string>
+
     <!-- Drawer header and titles -->
     <string name="home_title">Home</string>
     <string name="feed_title">Personal Feed</string>
