Add real activity tests, cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">DrawerTest</string>
+    <string name="app_name">Kendall</string>
     <string name="staples">Staples</string>
 
     <string name="left_drawer">Left Drawer</string>
