Update drawer items, put API URL in EasyOpenAPI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="personal_feed_title">Personal Feed</string>
 
     <string name="shop_header">Shop by Category</string>
+    <string name="ink_title">Ink &amp; Toner</string>
+    <string name="school_title">Back to School Center</string>
     <string name="products_title">Products</string>
     <string name="technology_title">Technology</string>
     <string name="services_title">Services</string>
@@ -25,7 +27,7 @@
     <string name="list_title">List</string>
 
     <string name="more_header">More</string>
-    <string name="ink_title">Ink &amp; Toner Finder</string>
+
     <string name="settings_title">Settings</string>
     <string name="help_title">Help</string>
 
