--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,12 @@
     <string name="store_locator_title">Store Locator</string>
     <string name="weekly_ad_title">Weekly Ad</string>
     <string name="account_title">Account</string>
-    <string name="signin_title">Sign in</string>
+    <string name="signin_title">Sign In</string>
+    <string name="rewards_title">Rewards</string>
     <string name="order_title">Order</string>
     <string name="profile_title">Profile</string>
+
+    <string name="store_info_title">Store Info</string>
 
     <string name="tobedone_title">(To be done)</string>
 
