--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <!-- Drawer header titles -->
     <string name="home_title">Home</string>
     <string name="personal_feed_title">Personal Feed</string>
-    <string name="shop_categories_title">Shop by Category</string>
+    <string name="category_title">Shop by Category</string>
     <string name="store_locator_title">Store Locator</string>
     <string name="weekly_ad_title">Weekly Ad</string>
     <string name="account_title">Account</string>
@@ -18,6 +18,8 @@
     <string name="rewards_title">Rewards</string>
     <string name="order_title">Order</string>
     <string name="profile_title">Profile</string>
+
+    <string name="backtotop_title">Back to Menu</string>
 
     <string name="store_info_title">Store Info</string>
 
