--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search</string>
     <string name="empty">Nothing found</string>
-    <string name="your_cart">Your cart</string>
+    <string name="your_cart">Your cart (%1$d item%2$s)</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="cartitem_qty_label">Qty:</string>
