--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,10 @@
     <string name="update_button">Update</string>
     <string name="no_reviews">no reviews</string>
 
-    <string name="product_description">Product Description</string>
-    <string name="product_specs">Product Specs</string>
-    <string name="customer_reviews">Customer Reviews</string>
+    <string name="description">Description</string>
+    <string name="specifications">Specifications</string>
+    <string name="specs">Specs</string>
+    <string name="reviews">Reviews</string>
     <string name="accessories">Accessories</string>
 
     <string name="item">Item</string>
