--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,6 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search</string>
     <string name="empty">Nothing found</string>
-    <string name="your_cart">Your cart (%1$d item%2$s)</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="cartitem_qty_label">Qty:</string>
@@ -40,6 +39,12 @@
 
     <string name="item">Item</string>
     <string name="model">Model</string>
+
+    <string name="your_cart">Your cart (empty)</string>
+    <plurals name="your_cart">
+        <item quantity="one">Your cart (1 item)</item>
+        <item quantity="other">Your cart (%d items)</item>
+    </plurals>
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
 </resources>
