adjusting layout of cart drawer item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="empty">Nothing found</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="cartitem_qty_label">Qty:</string>
+    <string name="cartitem_qty_label">Qty</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="update_button">Update</string>
     <string name="no_reviews">no reviews</string>
