--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,14 @@
     <string name="model">Model</string>
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
+    <!-- Auto Suggestion -->
+    <string name="original_hint">See recent searches</string>
+    <string name="searching">Searching&#8230;</string>
+    <string name="error">(Web service error)</string>
+    <string name="json_error">(Web service error - JSON parse error)</string>
+    <string name="interrupted">(Web service interrupted)</string>
+    <string name="no_results">No suggestions</string>
+    <string name="keyword_matches_label">KEYWORD MATCHES</string>
+    <string name="recent_search_label">YOUR RECENT SEARCHES</string>
 </resources>
