--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="cartitem_qty_label">Qty</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="update_button">Update</string>
+    <string name="shipping">Shipping</string>
+    <string name="pretax_subtotal">Pre-tax Subtotal</string>
+    <string name="proceed_to_checkout">Proceed to Checkout</string>
     <string name="no_reviews">no reviews</string>
 
     <string name="description">Description</string>
