--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="no_reviews">no reviews</string>
     <string name="shipping_addr">Shipping Address</string>
     <string name="payment_method">Payment Method</string>
+    <string name="payment_cid">CID#</string>
     <string name="billing_addr">Billing Address</string>
     <string name="delivery_range">Delivery Range</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
