--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,16 +34,18 @@
     <string name="shipping">Shipping</string>
     <string name="expected_delivery">Expected Delivery:</string>
     <string name="pretax_subtotal">Pre-tax Subtotal</string>
-    <string name="proceed_to_checkout">Proceed to Checkout</string>
+    <string name="proceed_to_checkout">Secure Checkout</string>
     <string name="no_reviews">no reviews</string>
     <string name="shipping_addr">Shipping Address</string>
     <string name="payment_method">Payment Method</string>
-    <string name="payment_cid">CID#</string>
     <string name="billing_addr">Billing Address</string>
     <string name="delivery_range">Delivery Range</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
     <string name="tax">Tax</string>
     <string name="submit_order">Submit Order</string>
+    <string name="confirmation_title">Order Confirmation</string>
+    <string name="order_confirmation_msg">Thank you for your order!</string>
+    <string name="continue_shopping">Continue Shopping</string>
 
     <string name="description">Description</string>
     <string name="specifications">Specifications</string>
