checkout page: waiting to show submit button and other info until appropriate checkout page: fixing delivery range display cart: commenting out Update button for now (probably won't need it) cart: setting error indicator on quantity widget when update fails

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,10 @@
     <string name="confirmation_title">Order Confirmation</string>
     <string name="order_confirmation_msg">Thank you for your order!</string>
     <string name="continue_shopping">Continue Shopping</string>
+    <plurals name="business_days">
+        <item quantity="one">1 business day</item>
+        <item quantity="other">%s business days</item>
+    </plurals>
 
     <string name="description">Description</string>
     <string name="specifications">Specifications</string>
