adding guest checkout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="shipping_addr">Shipping Address</string>
     <string name="payment_method">Payment Method</string>
     <string name="billing_addr">Billing Address</string>
+    <string name="use_as_billing_addr">Use as billing address</string>
     <string name="delivery_range">Delivery</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
     <string name="tax">Tax</string>
