updating registered checkout to use profile info already loaded fixing case where no payment info avail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="no_reviews">no reviews</string>
     <string name="shipping_addr">Shipping Address</string>
     <string name="payment_method">Payment Method</string>
+    <string name="payment_method_required">Payment Method is required</string>
     <string name="billing_addr">Billing Address</string>
     <string name="use_as_billing_addr">Use as billing address</string>
     <string name="delivery_range">Delivery</string>
