--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="reenter_email">Re-enter Email</string>
     <string name="email_mismatch">Email address must match</string>
     <string name="required">Required</string>
-
+    <string name="cid">CID</string>
 
     <string name="description">Description</string>
     <string name="specifications">Specifications</string>
