allowing action bar to be customized customizing action bar from cart, checkout, and order confirmation fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,10 @@
     <string name="profile_title">Profile</string>
     <string name="about_title">About</string>
 
+    <string name="cart_title">Cart</string>
     <string name="checkout_title">Checkout</string>
+    <string name="guest_checkout_title">Guest Checkout</string>
+    <string name="order_confirmation_title">Order Confirmation</string>
     <string name="backtotop_title">Back to Menu</string>
     <string name="store_info_title">Store Info</string>
     <string name="tobedone_title">(To be done)</string>
@@ -73,10 +76,9 @@
     <string name="item">Item</string>
     <string name="model">Model</string>
 
-    <string name="your_cart">Your cart (empty)</string>
-    <plurals name="your_cart">
-        <item quantity="one">Your cart (1 item)</item>
-        <item quantity="other">Your cart (%d items)</item>
+    <plurals name="cart_qty">
+        <item quantity="one">1 item</item>
+        <item quantity="other">%d items</item>
     </plurals>
 
     <string name="original_hint">Search</string>
