--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="specs">Specs</string>
     <string name="reviews">Reviews</string>
     <string name="accessories">Accessories</string>
+    <string name="remove">Remove</string>
 
     <string name="would_you">Would you recommend this to a friend?</string>
 
