--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="search_hint">Search</string>
     <string name="empty">Nothing found</string>
 
+    <string name="add">ADD</string>
     <string name="cartitem_qty_label">Qty</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="update_button">Update</string>
@@ -51,6 +52,7 @@
     <!--<string name="delivery_range">Delivery</string>-->
     <string name="item_subtotal">Item total</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
+    <string name="coupon_code_hint">Add Coupon Code here</string>
     <string name="tax">Tax</string>
     <string name="submit_order">Submit Order</string>
     <string name="confirmation_title">Order Confirmation</string>
