more on coupons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="use_as_billing_addr">Use as billing address</string>
     <!--<string name="delivery_range">Delivery</string>-->
     <string name="item_subtotal">Item total</string>
-    <string name="coupons_rewards">Coupons &amp; Rewards</string>
+    <string name="coupons_rewards">Coupon &amp; Reward</string>
     <string name="coupon_code_hint">Add Coupon Code here</string>
     <string name="tax">Tax</string>
     <string name="submit_order">Submit Order</string>
