update code logic change for both address and credit card...fixing list selection so that diana code is working and tested..made some changes to profile so that it has email and username labels..included progress indicator and profile refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="add_address_title">New Shipping Address</string>
     <string name="edit_address_title">Shipping Address</string>
     <string name="edit_credit_card_title">Credit Card</string>
+    <string name="email_title">Email</string>
+    <string name="username_title">User name</string>
 
     <string name="cart_title">Cart</string>
     <string name="checkout_title">Checkout</string>
