--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search</string>
     <string name="empty">Nothing found</string>
+    <string name="loading">Loading...</string>
 
     <string name="add">ADD</string>
     <string name="cartitem_qty_label">Qty</string>
