adding initial code for RewardsFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,9 @@
     <!--<string name="link_account">Link Account</string>-->
     <!--<string name="rewards_card_number">Rewards Card Number</string>-->
     <!--<string name="rewards_phone_number">Your Rewards Account Phone Number</string>-->
+    <string name="rewards_list_tabtitle">REWARDS</string>
+    <string name="rewards_ink_tabtitle">INK RECYCLING</string>
+    <string name="rewards_summary_tabtitle">SUMMARY</string>
     <string name="tax">Tax</string>
     <string name="submit_order">Submit Order</string>
     <string name="confirmation_title">Order Confirmation</string>
