--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="weekly_ad_title">Weekly Ad</string>
     <string name="account_title">Account</string>
     <string name="signin_title">Sign In</string>
+    <string name="signout_title">Sign Out</string>
     <string name="rewards_title">Rewards</string>
     <string name="order_title">Order</string>
     <string name="profile_title">Profile</string>
