--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="account_title">Account</string>
     <string name="signin_title">Sign In</string>
     <string name="signout_title">Sign Out</string>
-    <string name="rewards_title">Rewards</string>
+    <string name="rewards_title">Staples Rewards</string>
     <string name="order_title">Order</string>
     <string name="profile_title">Profile</string>
     <string name="about_title">About</string>
