working orders page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="signout_title">Sign Out</string>
     <string name="rewards_title">Staples Rewards</string>
     <string name="link_rewards_title">Link Rewards Account</string>
-    <string name="order_title">Order</string>
+    <string name="order_title">Orders</string>
     <string name="profile_title">Profile</string>
     <string name="about_title">About</string>
     <string name="credit_card_title">Credit Cards</string>
