Attempt to fix GuestCheckout, new IdentifierType, new JUnit tests, cleaned PNGs

--- a/app/src/dev/res/values/strings.xml
+++ b/app/src/dev/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Dev Version of Kendall</string>
+    <string name="app_name">Kendall (Dev)</string>
     <string name="configuration_destination">http://204.232.161.159/</string>
 </resources>
