only applying addresses that have changed other misc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="payment_method_required">Payment Method is required</string>
     <string name="billing_address_required">Billing address is required</string>
     <string name="billing_addr">Billing Address</string>
-    <string name="use_as_billing_addr">Use as billing address</string>
+    <string name="use_as_billing_addr">Use above as billing address</string>
     <string name="item_subtotal">Item total</string>
     <string name="coupons_rewards">Coupons &amp; Rewards</string>
     <string name="coupon_code_hint">Add Coupon Code here</string>
