more on order confirmation layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="hide">HIDE</string>
     <string name="cancel">CANCEL</string>
     <string name="create_account">CREATE ACCOUNT</string>
+    <string name="account_confirmation_msg">Thanks for creating an account!</string>
 
     <string name="continue_shopping">Continue Shopping</string>
 
