--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search</string>
     <string name="empty">Nothing Found</string>
+    <string name="password_forgot">Forgot your password?</string>
 
     <!-- Personal Feed -->
     <string name="loading">Loading...</string>
